# Madden-OC-Web-App

./: .gitignore  README.md  pyrightconfig.json
apps/mobile/: App.js  app.json  package-lock.json  package.json
docs/contracts/: realtime-api.md
libs/schemas/python/: README.md  pyproject.toml
libs/schemas/python/shared_schemas/: __init__.py  realtime.py
libs/schemas/python/shared_schemas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
libs/schemas/src/: realtime.ts
services/api-realtime/: .env.example  requirements.txt
services/api-realtime/app/: main.py  rules_engine.py  stt.py  voice_parser.py
services/control-plane/: README.md  db.sqlite3  manage.py  requirements.txt
services/control-plane/core/: admin.py  models.py  urls.py  views.py
services/control-plane/core/management/commands/: import_ingestion.py
services/control-plane/core/migrations/: 0001_initial.py
services/control-plane/madden_oc/: asgi.py  settings.py  wsgi.py
services/ingestion/: README.md  requirements.txt
services/ingestion/ingestion/: normalize.py  parsers.py  run.py  sources.py
services/ingestion/output/: huddle_gg_index.json  huddle_gg_plays_sample.json
services/rules-engine/: requirements.txt
services/rules-engine/rules_engine/: __init__.py  engine.py
