[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-schemas"
version = "0.1.0"
description = "Shared schemas for Madden OC services"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.10,<3"]

[tool.setuptools.packages.find]
where = ["."]
